# RBA-Policy-Sentiment

./: .gitignore  CLAUDE.md
.claude/: launch.json
apps/scorer/: .env.example  README.md  REFRESH.md  pyproject.toml
apps/scorer/cache/llm/: .gitkeep
apps/scorer/data/lexicon/: lexicon.json
apps/scorer/src/rba_scorer/: __init__.py  cli.py  models.py  paths.py
apps/scorer/src/rba_scorer/benchmark/: __init__.py  gate.py  labels.py  metrics.py  report.py  runner.py  split.py
apps/scorer/src/rba_scorer/ingest/: __init__.py  cashrate.py  fetch.py  index.py  pipeline.py  release.py
apps/scorer/src/rba_scorer/score/: __init__.py  base.py  engine.py  extract.py  lexicon.py  llm.py  reconcile.py  runner.py  segment.py  store.py  summary.py  transformer.py  transformer_models.py
apps/scorer/src/rba_scorer/storage/: __init__.py  json_store.py
apps/scorer/tests/: test_benchmark.py  test_cashrate.py  test_cli.py  test_engine.py  test_extract.py  test_index.py  test_lexicon.py  test_llm.py  test_pipeline.py  test_reconcile.py  test_release.py  test_score_runner.py  test_storage.py  test_summary.py  test_transformer.py
apps/web/: .gitignore  README.md  app.js  core.js  index.html  methodology.html  methodology.js  robots.txt  styles.css  vercel.json
apps/web/scripts/: sync-data.mjs
apps/web/tests/: core.test.mjs
data/: .gitkeep  decisions.json  engine_version.json  scores.json
data/benchmark/: .gitkeep  RUBRIC.md  benchmark_report.json  benchmark_report.md  labels.csv
data/exports/: .gitkeep
docs/prd/rba-policy-sentiment/: HANDOFF.md  PRD.md  TASKS.md
(+9 files in other folders)
