[project]
name = "rba-scorer"
version = "0.0.1"
description = "RBA Policy Sentiment — offline batch scorer (Milestone 0)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Omkar" }]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Heavy: pulls in PyTorch. Installed only when the transformer component is
# wired up (implementation plan step 16): `uv sync --extra transformer`.
transformer = [
    "torch>=2.2",
    "transformers>=4.40",
]

[project.scripts]
rba-scorer = "rba_scorer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rba_scorer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: hits live models/APIs or downloads weights (deselected by default)",
]

# CPU-only PyTorch from the official PyTorch index (design §3: CPU is fine for this
# batch job). Uses a different download host than PyPI's file CDN and avoids the
# heavy CUDA wheels.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
